<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">全民阅读</string>
    <string name="imageDescription">imageDescription</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_left">标题栏左键</string>
    <string name="title_name_example">标题</string>
    <string name="pull_to_refresh_pull_down_tips">下拉可以刷新</string>
    <string name="pull_to_refresh_pull_up_tips">上拉加载更多</string>
    <string name="pull_to_refresh_release_tips">松开即可刷新</string>
    <string name="pull_to_refresh_refreshing_tips">加载中…</string>
    <string name="pull_to_refresh_click_tips">点击更新</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="text_btn_login">登录</string>
    <string name="text_et_hint_username">  用户名</string>
    <string name="text_et_hint_password">  密码  </string>
    <string name="text_btn_magazine_download">下载</string>
    <string name="text_intro">简介</string>
    <string name="text_magazine">杂志</string>
    <string name="text_refer">参阅</string>
    <string name="text_account">账户</string>
    <string name="text_logout">注销</string>
    <string name="text_welcome">欢迎您，</string>
    <string name="text_info_phoneNumber">电话号码</string>
    <string name="text_forget_the_password">忘记密码?</string>
    <string name="text_modification_the_password">修改密码</string>
    <string name="text_about">关于</string>
    <string name="text_get_ver">当前版本:</string>
    <string name="text_account_example">account</string>
    <string name="text_reload">点击重新加载</string>
    <string name="text_unit_choose">请选择单位：</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label"> 上提加载下页…</string>
    <string name="pull_to_refresh_from_bottom_release_label"> 放开以加载下页…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label"> 正在载入…</string>
    <string name="title_activity_unit_choose">UnitChooseActivity</string>

</resources>