<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/head_layout"
        layout="@layout/title_layout" />

    <RelativeLayout
        android:id="@+id/user_info_border"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_image_thumb">

        <RelativeLayout
            android:id="@+id/setting_user_info"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_account_label"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/imageDescription"
                android:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/iv_account_label"
                android:text="@string/text_account_example"
                android:textColor="@color/color_b30f13"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/ic_arrow"
                android:text="@string/text_logout"
                android:textColor="@color/color_7f7f7f"
                android:textSize="14sp" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/modification_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_info_border"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_modification_the_password"
        android:textSize="14dp"
        android:textColor="@color/color_7f7f7f" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/modification_pw"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_about"
        android:textColor="@color/color_7f7f7f" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_image_thumb">

        <RelativeLayout
            android:id="@+id/setting_about"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/ver_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_get_ver"
                android:textColor="@color/color_b30f13" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ver_text"
                android:textColor="@color/color_b30f13"
                android:textSize="14sp" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>